--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,146 +4,146 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
+    android:fitsSystemWindows="true"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    android:orientation="vertical"
-    android:background="@color/bg"
-    android:gravity="center_horizontal"
-    tools:context="iitb.nihhaar.acadboard.RegisterActivity"
-    android:fitsSystemWindows="true">
+    tools:context="iitb.nihhaar.acadboard.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="133dp"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
             android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_border"
+            android:ems="10"
             android:hint="Email"
-            android:background="@drawable/round_border"
-            android:paddingTop="15px"
-            android:paddingBottom="15px"
-            android:paddingRight="15px"
-            android:paddingLeft="30px"
-            android:minWidth="280dp"
+            android:inputType="textEmailAddress"
             android:minHeight="50dp"
-            android:textColorHint="@color/text"
-            android:textColor="#fff"/>
+            android:minWidth="280dp"
+            android:paddingBottom="15px"
+            android:paddingLeft="30px"
+            android:paddingRight="15px"
+            android:paddingTop="15px"
+            android:textColor="#fff"
+            android:textColorHint="@color/text"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:layout_marginTop="20dp"
             android:id="@+id/password1"
-            android:hint="Password"
-            android:background="@drawable/round_border"
-            android:paddingTop="15px"
-            android:paddingBottom="15px"
-            android:paddingRight="15px"
-            android:paddingLeft="30px"
-            android:minWidth="280dp"
-            android:minHeight="50dp"
-            android:textColorHint="@color/text"
-            android:textColor="#fff"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-
-        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
             android:layout_marginTop="20dp"
-            android:id="@+id/password2"
-            android:hint="Re-type Password"
             android:background="@drawable/round_border"
-            android:paddingTop="15px"
-            android:paddingBottom="15px"
-            android:paddingRight="15px"
-            android:paddingLeft="30px"
-            android:minWidth="280dp"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
             android:minHeight="50dp"
-            android:textColorHint="@color/text"
-            android:textColor="#fff"/>
+            android:minWidth="280dp"
+            android:paddingBottom="15px"
+            android:paddingLeft="30px"
+            android:paddingRight="15px"
+            android:paddingTop="15px"
+            android:textColor="#fff"
+            android:textColorHint="@color/text"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/password2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_border"
+            android:ems="10"
+            android:hint="Re-type Password"
+            android:inputType="textPassword"
+            android:minHeight="50dp"
+            android:minWidth="280dp"
+            android:paddingBottom="15px"
+            android:paddingLeft="30px"
+            android:paddingRight="15px"
+            android:paddingTop="15px"
+            android:textColor="#fff"
+            android:textColorHint="@color/text"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
-            android:text="@string/reg"
+            android:id="@+id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/register"
             android:layout_marginTop="20dp"
             android:background="@drawable/round_button"
-            android:textColor="#fff"
-            android:paddingTop="15px"
-            android:paddingBottom="15px"
-            android:paddingRight="15px"
-            android:paddingLeft="15px"
+            android:minHeight="50dp"
             android:minWidth="280dp"
-            android:minHeight="50dp" />
+            android:paddingBottom="15px"
+            android:paddingLeft="15px"
+            android:paddingRight="15px"
+            android:paddingTop="15px"
+            android:text="@string/reg"
+            android:textColor="#fff" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingTop="15px"
-            android:paddingBottom="15px"
-            android:paddingRight="15px"
-            android:paddingLeft="30px"
             android:gravity="center_horizontal"
-            android:textSize="15dp"
+            android:paddingBottom="15px"
+            android:paddingLeft="30px"
+            android:paddingRight="15px"
+            android:paddingTop="15px"
             android:text="Already a member?"
-            android:textColor="@color/text"/>
+            android:textColor="@color/text"
+            android:textSize="15dp"/>
 
         <TextView
             android:id="@+id/signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingTop="15px"
+            android:gravity="center_horizontal"
             android:paddingBottom="15px"
             android:paddingRight="15px"
-            android:gravity="center_horizontal"
-            android:textSize="15dp"
+            android:paddingTop="15px"
             android:text="Sign in"
-            android:textColor="#fff"/>
+            android:textColor="#000"
+            android:textSize="15dp"/>
 
     </LinearLayout>
 
