--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="gradient_start">#9C28AF</color>
     <color name="gradient_end">#5e09ef</color>
-    <color name="bg">#2B3238</color>
+    <color name="bg">#fff</color>
     <color name="text">#5B626A</color>
-    <color name="bg1">#3A4149</color>
+    <color name="bg1">#EEEEEE</color>
     <color name="button">#EA4C89</color>
 </resources>
