Successfully got upto Lab submission!! Made many minor changes and login and logout works  perfectly!!1

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
         android:paddingLeft="30px"
         android:paddingRight="15px"
         android:paddingTop="15px"
-        android:textColor="#fff"
+        android:textColor="@color/blue"
         android:textColorHint="@color/text"/>
 
     </LinearLayout>
@@ -70,7 +70,7 @@
         android:paddingLeft="30px"
         android:paddingRight="15px"
         android:paddingTop="15px"
-        android:textColor="#fff"
+        android:textColor="@color/blue"
         android:textColorHint="@color/text"/>
     </LinearLayout>
 
