--- a/app/src/main/res/drawable/round_button_normal.xml
+++ b/app/src/main/res/drawable/round_button_normal.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/button"/>
+            <solid android:color="@color/blue"/>
             <corners android:radius="3dp" />
         </shape>
     </item>
