--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -15,8 +15,8 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/colorPrimaryDark"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/black"
-        android:dividerHeight="1dp"
-        android:background="@color/colorPrimary"/>
+        android:divider="@android:color/transparent"
+        android:dividerHeight="3dp"/>
 </android.support.v4.widget.DrawerLayout>
