--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -61,7 +61,7 @@
             android:paddingLeft="30px"
             android:paddingRight="15px"
             android:paddingTop="15px"
-            android:textColor="#fff"
+            android:textColor="@color/blue"
             android:textColorHint="@color/text"/>
     </LinearLayout>
 
@@ -86,7 +86,7 @@
             android:paddingLeft="30px"
             android:paddingRight="15px"
             android:paddingTop="15px"
-            android:textColor="#fff"
+            android:textColor="@color/blue"
             android:textColorHint="@color/text"/>
     </LinearLayout>
 
