--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="button">#EA4C89</color>
     <color name="white">#fff</color>
     <color name="grey">#3f3f41</color>
+    <color name="black">#000</color>
 </resources>
